Add fast manual and freeform card builder
